k8s/backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fit-and-fails-backend
  namespace: fit-and-fails
spec:
  replicas: 2
  selector:
    matchLabels:
      app: fit-and-fails-backend
  template:
    metadata:
      labels:
        app: fit-and-fails-backend
    spec:
      containers:
        - name: backend
          image: docker.io/elieltondevopsengineer/fit-and-fails-backend:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 4000
          readinessProbe:
            httpGet:
              path: /
              port: 4000
            initialDelaySeconds: 10
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /
              port: 4000
            initialDelaySeconds: 30
            periodSeconds: 30
---
apiVersion: v1
kind: Service
metadata:
  name: fit-and-fails-backend
  namespace: fit-and-fails
spec:
  selector:
    app: fit-and-fails-backend
  ports:
    - port: 4000
      targetPort: 4000
