k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: fit-and-fails
  namespace: fit-and-fails
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
    - host: fitandfails.example.com
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: fit-and-fails-backend
                port:
                  number: 4000
          - path: /
            pathType: Prefix
            backend:
              service:
                name: fit-and-fails-frontend
                port:
                  number: 80
